<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="pictures"
            type="com.mvlprem.apod.domain.Pictures" />

        <variable
            name="clickListner"
            type="com.mvlprem.apod.adapters.ItemClickListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_big">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Headline5"
            app:date="@{pictures}"
            tools:text="@string/apod_date" />

        <com.google.android.material.card.MaterialCardView
            style="@style/Card.Background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> clickListner.onClick(pictures)}"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    style="@style/Card.Background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_medium"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/card_corner_radius"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/content_description"
                        android:scaleType="centerCrop"
                        app:image="@{pictures}"
                        tools:src="@drawable/broken_image" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="@dimen/max_textSize"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_big"
                    android:textAppearance="@style/Headline5"
                    app:title="@{pictures}"
                    tools:text="@string/apod_title" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</layout>