<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mvlprem.apod.viewmodels.SharedViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragments.DetailsFragment">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_small"
                android:backgroundTint="@android:color/transparent"
                app:cardCornerRadius="@dimen/margin_small"
                app:cardElevation="0dp"
                app:layout_constraintDimensionRatio="4:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description"
                    android:scaleType="centerCrop"
                    app:hdImage="@{viewModel.parcelizeData}"
                    tools:src="@drawable/broken_image" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:textAlignment="center"
                android:textAppearance="@style/Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:title="@{viewModel.parcelizeData}"
                tools:text="@string/apod_title" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:text="@{viewModel.parcelizeData.date}"
                android:textAlignment="center"
                android:textAppearance="@style/Subtitle2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="@string/apod_date" />

            <TextView
                android:id="@+id/explanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_big"
                android:textAlignment="center"
                android:textAppearance="@style/Subtitle1"
                app:explanation="@{viewModel.parcelizeData}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date"
                tools:text="@string/apod_explanation" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_big"
                app:cardCornerRadius="@dimen/margin_big"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/explanation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_big"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/content_description_button"
                        android:minHeight="@dimen/btn_min_height"
                        android:src="@drawable/ic_share" />

                    <ImageButton
                        android:id="@+id/btn_download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_big"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/content_description_button"
                        android:minHeight="@dimen/btn_min_height"

                        android:src="@drawable/ic_download" />

                    <ImageButton
                        android:id="@+id/btn_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_big"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/content_description_button"
                        android:minHeight="@dimen/btn_min_height"
                        android:src="@drawable/ic_favorite" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>